objects/HAUFE1__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Contact_Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HAUFE1</label>
    <nameField>
        <label>HAUFE1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HAUFE1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ContactNumber_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Contact_Number__c)</errorConditionFormula>
        <errorDisplayField>Contact_Number__c</errorDisplayField>
        <errorMessage>Contact Number is required.</errorMessage>
    </validationRules>
</CustomObject>